# cefeo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cefeo.cpp  compile_commands.json  config.lua  display.cpp  gui-editor  input.cpp  main.c  main_unicode.c  makefile  requiremnts.sh  simple_editor_gui.c
cefeo-prototype/: CMakeLists.txt
cefeo-prototype/core/: core.h
cefeo-prototype/platform/linux/: main.cpp
cefeo-prototype/platform/windows/: main.cpp
core/: buffer.c  buffer.h  core.c  core.h  editor.c  editor.h  file.c  file.h  terminal.c
demos/: display.h  input.h  main.c  main.cpp  requiremnts.sh  simple_editor_gui.c  what_key.c
demos/cefeo-prototype/core/: core.c  core.h
demos/deariamgui/: CMakeLists.txt
demos/deariamgui/src/: editor.cpp  editor.h  main.cpp
platform/windows/: main.cpp
